--- a/pset1/piwords/.vscode/tasks.json
+++ b/pset1/piwords/.vscode/tasks.json
@@ -7,7 +7,10 @@
       "label": "run",
       "type": "shell",
       "command": "javac -d . *.java && java piwords/Main",
-      "group": "build",
+      "group": {
+        "kind": "test",
+        "isDefault": true
+      },
       "problemMatcher": []
     }
   ]
